feat: adiciona lógica para remover foto de perfil e atualiza estilos dos botões de foto

--- a/editar-perfil.html
+++ b/editar-perfil.html
@@ -58,7 +58,11 @@
                 <div class="profile-pic-container">
                     <img src="https://via.placeholder.com/100" alt="Foto de Perfil" id="profile-pic-preview">
                     <input type="file" id="profile-pic-input" accept="image/png, image/jpeg">
-                    <label for="profile-pic-input" class="btn-secondary">Trocar Foto</label>
+                    
+                    <div class="profile-pic-buttons">
+                        <label for="profile-pic-input" class="btn-secondary">Trocar Foto</label>
+                        <button type="button" id="profile-pic-remove" class="btn-danger">Remover</button>
+                    </div>
                 </div>
                 
                 <div class="form-group">
