--- a/configuracoes.html
+++ b/configuracoes.html
@@ -64,16 +64,15 @@
                 <div class="card">
                     <h3 class="card-title">Meu Perfil</h3>
                     
-                    <div class="profile-pic-container">
+                   <div class="profile-pic-container">
                         <img src="https://via.placeholder.com/100" alt="Foto de Perfil" id="profile-pic-preview">
                         <input type="file" id="profile-pic-input" accept="image/png, image/jpeg">
-                        <label for="profile-pic-input" class="btn-secondary">Trocar Foto</label>
-                    </div>
-                    <form id="form-meu-perfil" class="form-layout">
-                        <div class="form-group">
-                            <label for="nome-completo">Nome Completo</label>
-                            <input type="text" id="nome-completo" value="Admin">
+                        
+                        <div class="profile-pic-buttons"> 
+                            <label for="profile-pic-input" class="btn-secondary">Trocar Foto</label>
+                            <button type="button" id="profile-pic-remove" class="btn-danger">Remover</button>
                         </div>
+                    </div>
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" id="email" value="admin@mercadobomd.com">
