--- a/registrar-venda.html
+++ b/registrar-venda.html
@@ -97,6 +97,13 @@
             Nota: Este formulário registra a venda de um tipo de produto por vez. O Back-end irá somar todas as vendas registradas hoje para o "Total do Dia".
          </small>
     </main>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
 
+<script src="firebase-config.js"></script>
+
+<script src="app.js"></script>
 </body>
 </html>
