--- a/configuracoes.html
+++ b/configuracoes.html
@@ -159,7 +159,14 @@
         </div> 
     </main>
 
-    <script src="app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
+
+<script src="firebase-config.js"></script>
+
+<script src="app.js"></script>
 
 </body>
 </html>
