--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             </form>
         </div>
     </div>
-    <script src="app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
+
+<script src="firebase-config.js"></script>
+
+<script src="app.js"></script>
 </body>
 </html>
