--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Mercado BOM D+</title>
+    <title>Criar Conta - Mercado BOM D+</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -15,36 +15,33 @@
             
             <div class="login-header">
                 <h3>Mercado BOM D+</h3>
-                <p>Acesse seu painel de estoque</p>
+                <p>Crie sua conta de administrador</p>
             </div>
 
-            <form id="form-login" class="form-layout">
+            <form id="form-cadastro" class="form-layout">
                 
                 <div class="form-group">
-                    <label for="email">Email ou Usuário</label>
-                    <input type="text" id="email" placeholder="Digite seu email ou usuário" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Digite seu melhor email" required>
                 </div>
 
                 <div class="form-group">
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" placeholder="••••••••" required>
+                    <input type="password" id="senha" placeholder="•••••••• (mínimo 6 caracteres)" required>
                 </div>
 
-                <div class="form-group-inline">
-                    <div class="remember-me">
-                        <input type="checkbox" id="remember-me">
-                        <label for="remember-me">Lembrar de mim</label>
-                    </div>
-                    <a href="#" class="forgot-password">Esqueceu a senha?</a>
+                <div class="form-group">
+                    <label for="confirma-senha">Confirmar Senha</label>
+                    <input type="password" id="confirma-senha" placeholder="••••••••" required>
                 </div>
-
-                <a href="cadastro.html" class="forgot-password" style="margin-top: 10px; text-align: center; display: block;">Não tem conta? Crie uma</a>
 
                 <div class="form-actions" style="border-top: none; padding-top: 10px;">
                     <button type="submit" class="btn-primary btn-full-width">
-                        <i class="fas fa-sign-in-alt"></i> Entrar
+                        <i class="fas fa-user-plus"></i> Criar Conta
                     </button>
                 </div>
+
+                <a href="index.html" class="forgot-password" style="margin-top: 15px; text-align: center; display: block;">Já tem conta? Fazer Login</a>
 
             </form>
         </div>
