--- a/perfis.html
+++ b/perfis.html
@@ -21,13 +21,6 @@
         <a href="configuracoes.html" class="btn-secondary manage-profiles-btn">Gerenciar Perfis</a>
     </div>
 
-   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
-
-<script src="firebase-config.js"></script>
-
-<script src="app.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
