--- a/registrar-venda.html
+++ b/registrar-venda.html
@@ -97,6 +97,12 @@
             Nota: Este formulário registra a venda de um tipo de produto por vez. O Back-end irá somar todas as vendas registradas hoje para o "Total do Dia".
          </small>
     </main>
-<script type="module" src="app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script src="firebase-config.js"></script>
+    
+    <script src="app.js"></script>
 </body>
 </html>
