--- a/editar-produto.html
+++ b/editar-produto.html
@@ -110,6 +110,12 @@
         </div>
     </main>
 
-<script type="module" src="app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script src="firebase-config.js"></script>
+    
+    <script src="app.js"></script>
 </body>
 </html>
