--- a/perfis.html
+++ b/perfis.html
@@ -21,6 +21,12 @@
         <a href="configuracoes.html" class="btn-secondary manage-profiles-btn">Gerenciar Perfis</a>
     </div>
 
-<script type="module" src="app.js"></script>
+<<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script src="firebase-config.js"></script>
+    
+    <script src="app.js"></script>
 </body>
 </html>
