--- a/registrar-entrada.html
+++ b/registrar-entrada.html
@@ -110,7 +110,13 @@
             </form>
         </div>
     </main>
-<script type="module" src="app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script src="firebase-config.js"></script>
+    
+    <script src="app.js"></script>
 
 </body>
 </html>
