--- a/relatorios-estoque-baixo.html
+++ b/relatorios-estoque-baixo.html
@@ -105,8 +105,13 @@
         </div>
 
     </main>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-  <script type="module" src="app.js"></script>
+    <script src="firebase-config.js"></script>
+    
+    <script src="app.js"></script>
 
 </body>
 </html>
