--- a/relatorios-inventario.html
+++ b/relatorios-inventario.html
@@ -111,6 +111,12 @@
 
     </main>
 
-<script type="module" src="app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script src="firebase-config.js"></script>
+    
+    <script src="app.js"></script>
 </body>
 </html>
