--- a/public/relatorios-vendas.html
+++ b/public/relatorios-vendas.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relatório: Inventário - Mercado BOM D+</title>
+    <title>Relatório: Vendas Diárias - Mercado BOM D+</title>
 
-    <script src="auth-guard.js"></script>
+    <script type="module" src="auth-guard.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -53,13 +53,14 @@
                 </div>
                 </div>
         </header>
+
         <div class="page-header">
             <h1>Relatórios do Estoque</h1>
         </div>
 
         <h2 class="section-title">Selecionar Relatório</h2>
         <div class="report-selector">
-            <a href="relatorios-vendas.html" class="report-card">
+            <a href="relatorios-vendas.html" class="report-card active">
                 <i class="fas fa-wallet"></i>
                 <h4>Vendas Diárias</h4>
                 <small>Histórico de vendas por dia.</small>
@@ -69,7 +70,7 @@
                 <h4>Estoque Baixo</h4>
                 <small>Itens que precisam de reposição.</small>
             </a>
-            <a href="relatorios-inventario.html" class="report-card active">
+            <a href="relatorios-inventario.html" class="report-card">
                 <i class="fas fa-dollar-sign"></i>
                 <h4>Inventário (Valor)</h4>
                 <small>Valor total de custo do estoque.</small>
@@ -83,7 +84,7 @@
         
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Relatório: Inventário (Valor de Custo)</h3>
+                <h3 class="card-title">Relatório: Histórico de Vendas Diárias</h3>
                 <button class="btn-secondary"><i class="fas fa-print"></i> Imprimir</button>
             </div>
             
@@ -91,20 +92,15 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Produto</th>
-                            <th>Qtd. em Estoque</th>
-                            <th>Custo Unitário (R$)</th>
-                            <th>Custo Total (R$)</th>
+                            <th>Data</th>
+                            <th>Total Vendas (R$)</th>
+                            <th>Cartão (R$)</th>
+                            <th>Dinheiro (R$)</th>
+                            <th>Pix (R$)</th>
                         </tr>
                     </thead>
-                    <tbody id="inventory-report-body">
+                    <tbody id="sales-report-body">
                         </tbody>
-                    <tfoot>
-                        <tr class="table-total-footer">
-                            <td colspan="3">VALOR TOTAL DO ESTOQUE</td>
-                            <td class="total-col" id="inventory-total-footer">R$ 0,00</td>
-                        </tr>
-                    </tfoot>
                 </table>
             </div>
         </div>
@@ -112,5 +108,6 @@
     </main>
 
     <script type="module" src="app.js"></script>
+
 </body>
 </html>
